mudanca dos botoes abaixo do cardapio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,6 +220,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
   letter-spacing: 1px;
   transition: 0.3s;
+  background-color:#cda45e;
 }
 
 .book-a-table-btn:hover {
@@ -935,7 +936,9 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
