--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1731,3 +1731,15 @@ section {
 }
 
 
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #1a1814;
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+}
+
