link para cardapio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1754,7 +1754,7 @@ Foods menu
 */
 
 .food-menu-card {
-    padding: 30px 20px;
+    /* padding: 30px 20px; */
     background-color: #1a1814;
     border-radius: 8px;
 }
